refactor : 안 쓰는 코드 제거